fix issue with click events, collapse all items by default

--- a/assets/src/styles/unity-accordion.scss
+++ b/assets/src/styles/unity-accordion.scss
@@ -38,6 +38,7 @@
       margin-left: 1rem;
       width: 16px;
       height: 16px;
+      pointer-events: none;
 
       rect {
         fill: currentColor;
